--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.6",
-    "next": "13.1.6",
+    "next": "^14.2.15",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "react-scroll": "^1.8.9"
+    "react-scroll": "^1.8.9",
+    "webpack": "^5.95.0"
   },
   "devDependencies": {
     "@types/node": "20.10.3",
